crates/ruff_python_formatter/tests/snapshots/format@expression__list_comp_py315.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/expression/list_comp_py315.py
---
## Input
```python
[*x for x in y]

[
    *  # comment between * and x
    x
    for x in y
]

[
    *values
    for values in some_really_long_collection_name_that_should_force_wrapping
]

{*x for x in y}

{
    *  # comment between * and x
    x
    for x in y
}

{**d for d in dicts}

{
    **d
    for d in dicts
}

(*x for x in y)

f(*x for x in y)
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.15
source_type                = Python
nested-string-quote-style  = alternating
```

```python
[*x for x in y]

[
    # comment between * and x
    *x
    for x in y
]

[*values for values in some_really_long_collection_name_that_should_force_wrapping]

{*x for x in y}

{
    # comment between * and x
    *x
    for x in y
}

{**d for d in dicts}

{**d for d in dicts}

(*x for x in y)

f(*x for x in y)
```
